--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "babel-plugin-module-resolver": "^4.1.0",
     "customize-cra": "^1.0.0",
+    "prettier": "2.8.1",
     "react-app-rewired": "^2.2.1",
     "sass": "^1.56.1"
   },
